iptables

# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 61.216.144.186/32 -j ACCEPT
-A INPUT -s 61.216.144.184/32 -j ACCEPT
-A INPUT -s 58.218.198.140/32 -j ACCEPT
-A INPUT -s 121.201.126.154/32 -j ACCEPT
-A INPUT -s 121.31.40.102/32 -j ACCEPT
-A INPUT -s 121.18.238.84/32 -j ACCEPT
-A INPUT -s 218.85.133.210/32 -j ACCEPT
-A INPUT -s 122.228.244.207/32 -j ACCEPT
-A INPUT -s 222.88.94.206/32 -j ACCEPT
-A INPUT -s 123.249.34.189/32 -j ACCEPT
-A INPUT -s 117.21.191.101/32 -j ACCEPT
-A INPUT -s 119.90.126.103/32 -j ACCEPT
-A INPUT -s 124.232.137.43/32 -j ACCEPT
-A INPUT -s 118.123.243.214/32 -j ACCEPT
-A INPUT -s 27.221.52.39/32 -j ACCEPT
-A INPUT -s 221.181.73.38/32 -j ACCEPT
-A INPUT -s 60.169.77.177/32 -j ACCEPT
-A INPUT -s 59.45.26.145/32 -j ACCEPT
-A INPUT -s 202.111.175.61/32 -j ACCEPT
-A INPUT -s 219.153.49.198/32 -j ACCEPT
-A INPUT -s 219.138.135.102/32 -j ACCEPT
-A INPUT -s 125.211.218.83/32 -j ACCEPT
-A INPUT -s 111.161.65.109/32 -j ACCEPT
-A INPUT -s 117.34.109.53/32 -j ACCEPT
-A INPUT -s 124.164.232.146/32 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
COMMIT
